# taguchi-tables

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
src/: lib.rs
www/: index.html  index.js  index.ts  package-lock.json  package.json
