[package]
name = "taguchi-tables"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oars = "3.0.1"
# Enable JS feature for `getrandom` dependency inside `oars`.
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0.56"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.90"

[features]
default = ["dep:console_error_panic_hook"]
